--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Unity Web Player | Janniks Sandbox</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/pako@latest/dist/pako.min.js"></script>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
